--- a/package.json
+++ b/package.json
@@ -1,20 +1,44 @@
 {
-  "name": "ecommerce",
+  "name": "nexttypescript",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production nodemon",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/cors": "^2.8.12",
+    "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth": "^1.0.42",
+    "bootstrap": "^5.1.0",
+    "chalk": "^4.1.2",
+    "consola": "^2.15.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "loglevel": "^1.7.1",
+    "next": "^11.0.1",
+    "next-cookies": "^2.0.3",
+    "next-i18next": "^8.6.0",
+    "next-translate": "^1.0.7",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "sass": "^1.37.5"
   },
   "devDependencies": {
-    "eslint": "7.7.0",
-    "eslint-config-next": "11.0.1"
+    "@types/express": "^4.17.13",
+    "@types/react": "17.0.16",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.0.1",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.0",
+    "typescript": "4.3.5"
   }
 }
