--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "next build",
-    "start": "NODE_ENV=production nodemon",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
